# spot-scraper

./: Cargo.toml
src/: client.rs  error.rs  models.rs
src/parsers/: course_detail.rs  courses.rs  mod.rs  topic_detail.rs
test/: integration_test.rs
tests/: all_topics_test.rs  integration_test.rs
