[package]
name = "spot-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["cookies", "json"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
